[package]
name = "gcsp"
description = "Google Cloud Storage CSEK S3 proxy"
version = "0.0.1"
edition = "2021"

[dependencies]
anyhow = "=1.0.95"
axum = { version = "=0.8.1", default-features = false, features = ["tokio", "http1", "http2", "tracing"] }
base64 = "=0.22.1"
chrono = "=0.4.39"
clap = { version = "=4.5.27", features = ["derive"]}
hex = "=0.4.3"
hmac = "=0.12.1"
itertools = "=0.14.0"
metrics = "=0.24.1"
metrics-exporter-prometheus = "=0.16.2"
regex = "=1.11.1"
reqwest = { version = "=0.12.12", features = ["stream"] }
serde = { version = "=1.0.217", features = ["derive"] }
sha2 = "=0.10.8"
tokio = { version = "=1.43.0", features = ["rt-multi-thread", "macros"] }
toml = "=0.8.19"
tracing = "=0.1.41"
tracing-subscriber = { version = "=0.3.19", features = ["json", "registry", "ansi"]}
uuid = { version = "=1.12.1", features = ["v4"] }

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
